--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Glauber Gadelha",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
